# django-polls

./: .gitignore  Readme.md  pyproject.toml
mysite/: settings.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
templates/admin/: base_site.html
